--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,94 @@
+ /*header section  */
+ header{
+width: 1440px;
+height: 715px;
+background: black
+ }
  /* navbar styles */
+.navbar{
+    display: flex;
+    justify-content:space-between;
+width: 1440px;
+height: 150px;
+}
+.header-list, a{
+    display: flex;
+    gap: 20px;
+    text-decoration: none;
+    
+}
+.fit{
+width: 132px;
+height: 44px;
+padding: 0px;
+margin-top: 57px;
+margin-left: 50px;
+margin-bottom: 0;
+color: rgb(230, 83, 60);
+font-family: Inter;
+font-size: 36px;
+font-weight: 800;
+line-height: 120%;
+letter-spacing: 0%;
+text-align: left;
+}
+.header-list{
+width: 465px;
+height: 45px;
+gap: 50px;
+padding: 4px;
+margin-top: 57px;
+border: 1px solid rgba(255, 255, 255, 0.1);
+border-radius: 39px;
+list-style: none;
+align-items: center;
+
+}
+.iconbar{
+    color: white;
+}
+.home{
+width: 92px;
+height: 37px;
+justify-content: center;
+align-items: center;
+padding: 8px 20px 8px 20px;
+border-radius: 46px;
+background: rgb(230, 83, 60);
+color: white;
+}
+.header-content{
+width: 520px;
+height: 281px;
+margin: 28px 0px;
+font-size: 78px;
+font-weight: 900;
+color: white;
+}
+.header-des{
+color: rgba(255, 255, 255, 0.5);
+font-family: Inter;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0.5px;
+text-align: left;
+}
+.get-body{
+width: 520px;
+height: 439px;
+margin: 71px 0px;
+border: 2px solid red;
+margin-left: 57px;
+}
+.join{
+width: 224px;
+height: 54px;
+gap: 10;
+padding: 16px 40px 16px 40px;
+border-radius: 42px;
+background: rgb(230, 83, 60);
+color: rgb(255, 255, 255);
+font-size: 18px;
+font-weight: 600;
+}
