--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
  /*header section  */
  header{
 width: 1440px;
-height: 715px;
+height: 800px;
 background: black
  }
  /* navbar styles */
@@ -38,6 +38,7 @@ height: 45px;
 gap: 50px;
 padding: 4px;
 margin-top: 57px;
+margin-right: 30px;
 border: 1px solid rgba(255, 255, 255, 0.1);
 border-radius: 39px;
 list-style: none;
@@ -76,9 +77,8 @@ text-align: left;
 }
 .get-body{
 width: 520px;
-height: 439px;
+height: 470px;
 margin: 71px 0px;
-border: 2px solid red;
 margin-left: 57px;
 }
 .join{
@@ -91,4 +91,69 @@ background: rgb(230, 83, 60);
 color: rgb(255, 255, 255);
 font-size: 18px;
 font-weight: 600;
+}
+.download{
+width: 224px;
+height: 54px;
+padding: 16px 40px 16px 40px;
+border: 1px solid rgb(255, 255, 255);
+background-color: black;
+border-radius: 42px;
+color: rgb(255, 255, 255);
+font-size: 18px;
+font-weight: 600;
+line-height: 22px;
+}
+.header-body{
+    display: flex;
+    justify-content: space-between;
+}
+.img-1{
+position: absolute;
+width: 349px;
+height: 580px;
+left: 1000px;
+top: 135px;
+}
+.header-blur{
+position: absolute;
+width: 200px;
+height: 100px;
+left: 900px;
+top: 556px;
+border: 1px solid rgba(255, 255, 255, 0.1);
+border-radius: 12px;
+backdrop-filter: blur(20px);
+background: rgba(48, 48, 48, 0.54);
+}
+.btn-2{
+    position: absolute;
+width: 50px;
+height: 50px;
+background: rgb(230, 83, 60);
+border-radius: 50%;
+margin-top: 25px;
+margin-left: 21px;
+margin-bottom: 20px;
+}
+.price{
+width: 68px;
+height: 24px;
+color: rgb(250, 250, 249);
+font-size: 24px;
+font-weight: 900;
+line-height: 24px;
+margin-top: 20px;
+margin-left: 85px;
+margin-bottom: 0;
+}
+.video{
+width: 108px;
+height: 24px;
+color: rgba(239, 237, 232, 0.65);
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+margin-left: 85px;
+margin-top: 5px;
 }
