--- a/styles/style.css
+++ b/styles/style.css
@@ -184,3 +184,37 @@ line-height: 20px;
 margin-left: 30px;
 margin-top: -35px;
 }
+/* main first section */
+
+/* Change Your Habits */
+
+/* first div */
+
+.main-first-section{
+
+}
+.first-section-title{
+
+}
+.change{
+
+}
+.believe{
+
+}
+/* 2nd div */
+.first-section-card{
+
+}
+.img-box{
+
+}
+.main-section-img{
+
+}
+.weight{
+
+}
+.fitness{
+    
+}
