--- a/styles/style.css
+++ b/styles/style.css
@@ -66,6 +66,10 @@ font-size: 78px;
 font-weight: 900;
 color: white;
 }
+.shape{
+    font-family: cursive;
+    font-weight: 100;
+}
 .header-des{
 color: rgba(255, 255, 255, 0.5);
 font-family: Inter;
@@ -191,30 +195,267 @@ margin-top: -35px;
 /* first div */
 
 .main-first-section{
+    margin-top: -20px;
+    
+    background-color: black;
 
 }
 .first-section-title{
 
 }
 .change{
-
+width: 476px;
+height: 57px;
+color: white;
+font-size: 48px;
+font-weight: 900;
+margin: 20px auto;
 }
 .believe{
+width: 671px;
+height: 48px;
+margin: 14px 0px;
+color: rgba(255, 255, 255, 0.5);
+font-size: 14px;
+font-weight: 400;
+margin: 10px auto;
 
 }
 /* 2nd div */
 .first-section-card{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 58px auto;
+width: 1044px;
+height: 300px;
 
 }
 .img-box{
+    gap: 10px;
+width: 231px;
+height: 273px;
 
 }
 .main-section-img{
+    border-radius: 50%;
+    margin-left: 20px;
 
 }
 .weight{
 
+    color: rgb(255, 255, 255);
+font-size: 18px;
+font-weight: 600;
+margin: 20px;
+padding-left: 50px;
+
 }
 .fitness{
-    
+    color: rgba(255, 255, 255, 0.5);
+font-family: Inter;
+font-size: 14px;
+font-weight: 400;
+line-height: 18px;
+letter-spacing: 0.3px;
+text-align: center;
+
 }
+/* second main section */
+.second-section-first-div{
+    display: flex;
+    gap: 50px;
+width: 1060px;
+height: 371px;
+border-radius: 18px;
+background: rgb(34, 34, 34);
+margin: 20px auto;
+}
+.second-sec-scnd-div{
+width: 443px;
+height: 289px;
+margin-top: 40px;
+margin-left: 54px;
+}
+.main-header{
+width: 443px;
+height: 115px;
+color: rgb(255, 255, 255);
+font-size: 48px;
+font-weight: 900;
+}
+.second-des{
+width: 443px;
+height: 72px;
+color: rgba(255, 255, 255, 0.5);
+font-size: 14px;
+font-weight: 400;
+margin-top: -20px;
+}
+.join-now{
+width: 224px;
+height: 54px;
+padding: 16px 40px 16px 40px;
+border-radius: 42px;
+background: rgb(230, 83, 60);
+color: rgb(255, 255, 255);
+font-size: 18px;
+font-weight: 600;
+margin-top: -20px;
+border-style: none;
+}
+.second-section-img{
+}
+.second-img{
+    width: 366px;
+    height: 312px;
+    border-radius: 18px;
+    background: url(4);
+    margin-top: 35px;
+    margin-left: 60px;
+}
+.third-section-first-div{
+max-width: 1440px;
+
+}
+.third-section-heading-title{
+    border: 2px solid red;
+    width: 1010px;
+    margin: 30px auto;
+}
+.third-heading{
+    color: rgb(255, 255, 255);
+    font-size: 48px;
+    font-weight: 900;
+    width: 573px;
+    height: 57px;
+}
+.third-des{
+    width: 671px;
+    height: 48px;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    font-weight: 400;
+}
+.img-section{
+    width: 1010px;
+    margin: 30px auto;
+    border: 2px solid red;
+}
+.img-row{
+    display: flex;
+   
+
+}
+.third-sec-first-background{
+width: 300px;
+height: 256px;
+}
+.third-sec-second-background{
+width: 400px;
+height: 256px;
+}
+.third-sec-third-background{
+width: 310px;
+height: 256px;
+}
+.third-sec-fourth-background{
+width: 340px;
+height: 250px;
+}
+.third-sec-fifth-background{
+width: 294px;
+height: 250px;
+}
+.third-sec-sixth-background{
+width: 376px;
+height: 250px;
+}
+
+/* BMI Calculator Chart */
+
+.BMI-section-flex{
+    display: flex;
+width: 1185px;
+height: 380px;
+background: rgb(34, 34, 34);
+margin: 100px auto;
+}
+.BMI-heading{
+    color: rgb(255, 255, 255);
+font-size: 28px;
+font-weight: 900;
+width: 443px;
+height: 34px;
+margin-left: 110px;
+margin-top: 40px;
+}
+.BMI-heading2{
+color: rgb(255, 255, 255);
+font-size: 28px;
+font-weight: 900;
+width: 443px;
+height: 34px;
+margin-left: 10px;
+margin-top: 40px;
+}
+.third-des2{
+    width: 671px;
+    height: 48px;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    font-weight: 400;
+    margin-left: 10px;
+    margin-top: -17px;
+}
+table{
+    border-collapse: collapse;
+}
+td, th{
+    border: 1px solid rgba(255, 255, 255, 0.1);;
+    padding: 10px 40px;
+}
+.BMI{
+    color: rgb(255, 255, 255);
+font-size: 16px;
+font-weight: 500;
+width: 34px;
+height: 19px;
+}
+.Below{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    font-weight: 400;
+    width: 71px;
+height: 17px;
+}
+.table{
+    margin-left: 100px;
+}
+.input{
+width: 282.5px;
+height: 48px;
+border-radius: 8px;
+background: rgba(255, 255, 255, 0.1);
+margin-bottom: 10px;
+margin-left: 5px;
+
+}
+.input2{
+    width: 587px;
+    height: 48px;
+    border-radius: 8px;
+background: rgba(255, 255, 255, 0.1);
+margin-top: 5px;
+margin-left: 5px;
+}
+
+/* Meet Our Team */
+.section-four{
+    border: 2px solid red;
+    width: 1000px;
+    margin: 10px auto;
+}
+
+
+
+
