--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+ .body{
+    background-color: black;
+ }
+ 
  /*header section  */
  header{
 width: 1440px;
@@ -165,7 +169,7 @@ margin-top: 5px;
 position: absolute;
 width: 193px;
 height: 98px;
-left: 1207px;
+left: 1240px;
 top: 260px;
 border: 1px solid rgba(255, 255, 255, 0.1);
 border-radius: 12px;
@@ -318,9 +322,9 @@ max-width: 1440px;
 
 }
 .third-section-heading-title{
-    border: 2px solid red;
     width: 1010px;
-    margin: 30px auto;
+    height: 200px;
+    margin: 50px auto;
 }
 .third-heading{
     color: rgb(255, 255, 255);
@@ -328,6 +332,7 @@ max-width: 1440px;
     font-weight: 900;
     width: 573px;
     height: 57px;
+
 }
 .third-des{
     width: 671px;
@@ -335,40 +340,75 @@ max-width: 1440px;
     color: rgba(255, 255, 255, 0.5);
     font-size: 14px;
     font-weight: 400;
+    margin-top: -20px;
 }
 .img-section{
     width: 1010px;
     margin: 30px auto;
-    border: 2px solid red;
 }
 .img-row{
     display: flex;
-   
-
 }
 .third-sec-first-background{
 width: 300px;
 height: 256px;
 }
+.gradiant-one{
+width: 300px;
+height: 256px;
+background-color: rgba(6, 255, 210, 0.5);
+position: absolute;
+}
 .third-sec-second-background{
 width: 400px;
 height: 256px;
 }
+.gradiant-two{
+width: 400px;
+height: 256px;
+background-color: rgba(255, 0, 0, 0.3);
+position: absolute;
+}
 .third-sec-third-background{
 width: 310px;
 height: 256px;
+
+}
+.gradiant-three{
+width: 310px;
+height: 256px;
+background-color: rgba(0, 0, 0, 0.5) ;
+position: absolute;
 }
 .third-sec-fourth-background{
 width: 340px;
 height: 250px;
 }
+.gradiant-four{
+width: 340px;
+height: 250px;
+background-color: rgba(0, 0, 0, 0.5) ; 
+position: absolute; 
+}
 .third-sec-fifth-background{
 width: 294px;
 height: 250px;
 }
+.gradiant-five{
+width: 294px;
+height: 250px;
+background-color: rgba(66, 255, 0, 0.3) ;
+position: absolute;
+}
 .third-sec-sixth-background{
 width: 376px;
 height: 250px;
+}
+.gradiant-six{
+width: 376px;
+height: 250px; 
+background-color: rgba(0, 71, 255, 0.3)  ; 
+position: absolute;
 }
 
 /* BMI Calculator Chart */
@@ -436,26 +476,202 @@ width: 282.5px;
 height: 48px;
 border-radius: 8px;
 background: rgba(255, 255, 255, 0.1);
-margin-bottom: 10px;
+margin-top: -15px;
+margin-bottom: 20px;
 margin-left: 5px;
-
 }
 .input2{
     width: 587px;
     height: 48px;
     border-radius: 8px;
 background: rgba(255, 255, 255, 0.1);
-margin-top: 5px;
+margin-top: -15px;
 margin-left: 5px;
+margin-bottom: 20px;
+}
+.Calculate-now{
+    width: 224px;
+height: 54px;
+padding: 16px 40px 16px 40px;
+border-radius: 42px;
+background: rgb(230, 83, 60);
+color: rgb(255, 255, 255);
+font-size: 18px;
+font-weight: 600;
+border-style: none;
 }
 
 /* Meet Our Team */
 .section-four{
-    border: 2px solid red;
     width: 1000px;
     margin: 10px auto;
 }
 
 
+/* Gym Trainer img box */
 
+.Gym-Trainer-img-box{
+display: grid;
+grid-template-columns: repeat(3,1fr);
+width: 1100px;
+height: 604px;
+margin-top: 20px;
+margin-left: 180px;
+}
+.frist-trainer-img{
+background-image: url(../images/trainer1.png);
+background-repeat: no-repeat;
+width: 326.67px;
+height: 272px;
+border-radius: 18px;
+background: rgba(0, 0, 0, 0.2),url(image);
+background-size: cover;
+margin-top: 20px;
+margin-left: 20px;
+}
+.second-trainer-img{
+background-image: url(../images/trainer2.png);
+background-repeat: no-repeat;
+width: 326.67px;
+height: 272px;
+border-radius: 18px;
+background: rgba(0, 0, 0, 0.2),url(image);
+background-size: cover;
+margin-top: 20px;
+}
+.third-trainer-img{
+background-image: url(../images/trainer3.png);
+background-repeat: no-repeat;
+width: 326.67px;
+height: 272px;
+border-radius: 18px;
+background: rgba(0, 0, 0, 0.2),url(image);
+background-size: cover;
+margin-top: 20px;
+margin-left: -10px;
+}
+.fourth-trainer-img{
+background-image: url(../images/trainer4.png);
+background-repeat: no-repeat;
+width: 326.67px;
+height: 272px;
+border-radius: 18px;
+background: rgba(0, 0, 0, 0.2),url(image);
+background-size: cover;
+margin-top: 20px;
+margin-left: 20px;
+}
+.fifth-trainer-img{
+background-image: url(../images/trainer5.png);
+background-repeat: no-repeat;
+width: 326.67px;
+height: 272px;
+border-radius: 18px;
+background: rgba(0, 0, 0, 0.2),url(image);
+background-size: cover;
+margin-top: 20px;
+}
+.sixth-trainer-img{
+background-image: url(../images/trainer6.png);
+background-repeat: no-repeat;
+width: 326.67px;
+height: 272px;
+border-radius: 18px;
+background: rgba(0, 0, 0, 0.2),url(image);
+background-size: cover;
+margin-top: 20px;
+margin-left: -10px;
+}
+.trainer-name{
+    width: 443px;
+    height: 34px;
+    color: rgb(255, 255, 255);
+font-size: 28px;
+font-weight: 900;
+margin-top: 200px;
+margin-left: 30px;
+}
+.professon{
+    width: 71px;
+    height: 17px;
+    color: rgba(255, 255, 255, 0.5);
+font-family: Inter;
+font-size: 14px;
+font-weight: 400;
+margin-top: -20px;
+margin-left: 40px;
+}
+
+/* footer section */
+
+.footer{
+    width: 1420px;
+    height: 489px;
+    background: rgba(255, 255, 255, 0.1);
+    margin-top: 70px;
+}
+.footer-first-div{
+display: flex;
+}
+.footer-second-div{
+width: 443px;
+height: 250px;
+margin-left: 200px;
+}
+.footer-headig{
+width: 256px;
+height: 84px;
+color: rgb(230, 83, 60);
+font-size: 70px;
+font-weight: 800;
+margin-top: 20px;
+}
+.footer-des{
+width: 443px;
+height: 72px;
+color: rgba(255, 255, 255, 0.5);
+font-size: 14px;
+font-weight: 400;
+margin-top: -40px;
+}
+.footer-get-started{
+display: flex;
+gap: 20px;
+}
+.flex-div1{
+width: 281px;
+height: 250px;
+margin-left: 100px;
+}
+.flex-div2{
+width: 281px;
+height: 250px;
+
+}
+.get-started{
+width: 181px;
+height: 39px;
+color: rgb(255, 255, 255);
+font-size: 32px;
+font-weight: 700;
+}
+a{
+color: rgba(255, 255, 255, 0.5);
+font-size: 23px;
+font-weight: 400;
+padding: 5px;
+}
+hr{
+width: 1059.5px;
+height: 0;
+border: 2px solid rgba(255, 255, 255, 0.1);
+}
+.All-right{
+    width: 318px;
+height: 24px;
+color: rgba(255, 255, 255, 0.5);
+font-size: 20px;
+font-weight: 400;
+margin: 10px auto;
+}
 
