--- a/styles/style.css
+++ b/styles/style.css
@@ -322,9 +322,10 @@ max-width: 1440px;
 
 }
 .third-section-heading-title{
-    width: 1010px;
+    width: 1000px;
     height: 200px;
-    margin: 50px auto;
+    margin-top: 80px;
+    margin-left: 200px;
 }
 .third-heading{
     color: rgb(255, 255, 255);
@@ -415,10 +416,11 @@ position: absolute;
 
 .BMI-section-flex{
     display: flex;
-width: 1185px;
-height: 380px;
+width: 1150px;
+height: 400px;
 background: rgb(34, 34, 34);
 margin: 100px auto;
+margin-top: -40px;
 }
 .BMI-heading{
     color: rgb(255, 255, 255);
@@ -472,22 +474,24 @@ height: 17px;
     margin-left: 100px;
 }
 .input{
-width: 282.5px;
+width: 258px;
 height: 48px;
 border-radius: 8px;
 background: rgba(255, 255, 255, 0.1);
 margin-top: -15px;
 margin-bottom: 20px;
 margin-left: 5px;
+padding-left: 20px;
 }
 .input2{
-    width: 587px;
+    width: 550px;
     height: 48px;
     border-radius: 8px;
 background: rgba(255, 255, 255, 0.1);
 margin-top: -15px;
 margin-left: 5px;
 margin-bottom: 20px;
+padding-left: 20px;
 }
 .Calculate-now{
     width: 224px;
